backport fnml and io